Spruce up our sharing image and metadata; add chefandy's png for collaboration page.

--- a/app/_config.yml
+++ b/app/_config.yml
@@ -86,6 +86,7 @@ defaults:
       path: ""
     values:
       custom-footer: false
+      sharing-card-type: summary
 
 ############################################################
 # Site configuration for the Jekyll 3 Pagination Gem
