Redirect collaborate -> jobs

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,12 +15,12 @@ server {
         rewrite ^/favicon.ico$ /assets/images/favicon.png permanent;
         rewrite ^/about.html$ /about/ permanent;
         rewrite ^/projects.html$ /projects/ permanent;
-        rewrite ^/fellows-application-2018/?$ /collaborate/2018/summer/fellows/apply/ permanent;
-        rewrite ^/fellows-application-2017/?$ /collaborate/2017/summer/fellows/apply/ permanent;
-        rewrite ^/fellows-application-2016/?$ /collaborate/2016/summer/fellows/apply/ permanent;
+        rewrite ^/fellows-application-2018/?$ /jobs/2018/summer/fellows/apply/ permanent;
+        rewrite ^/fellows-application-2017/?$ /jobs/2017/summer/fellows/apply/ permanent;
+        rewrite ^/fellows-application-2016/?$ /jobs/2016/summer/fellows/apply/ permanent;
         rewrite ^/fellows/?$ /collaborate/2018/summer/fellows/apply/ redirect;
         rewrite ^/projects/free-the-law/?$ /projects/caselaw-access-project/ permanent;
-        rewrite ^/jobs/?$ /collaborate redirect;
+        rewrite ^/collaborate(.*)$ /jobs$1 permanent;
     }
 
     # deny access to .htaccess files, if Apache's document root
