--- a/app/_config.yml
+++ b/app/_config.yml
@@ -30,7 +30,7 @@ facebook_url: https://www.facebook.com/HarvardLibraryInnovationLab/
 github_account_name: harvard-lil
 github_url:  https://github.com/harvard-lil
 address_name: The Library Innovation Lab
-address_street1: Langdell Hall
+address_street1: Lewis
 address_street2: 1545 Massachusetts Avenue
 address_map_url: https://www.google.com/maps/place/1545+Massachusetts+Ave,+Harvard+University,+Cambridge,+MA+02138/@42.377991,-71.1185105,17z/data=!3m1!4b1!4m2!3m1!1s0x89e37741a21295b9:0x22b97c31830fc93f
 address_city_state: Cambridge, MA 02138
