--- a/app/_config.yml
+++ b/app/_config.yml
@@ -30,9 +30,9 @@ facebook_url: https://www.facebook.com/HarvardLibraryInnovationLab/
 github_account_name: harvard-lil
 github_url:  https://github.com/harvard-lil
 address_name: The Library Innovation Lab
-address_street1: Langdell Hall
-address_street2: 1545 Massachusetts Avenue
-address_map_url: https://www.google.com/maps/place/1545+Massachusetts+Ave,+Harvard+University,+Cambridge,+MA+02138/@42.377991,-71.1185105,17z/data=!3m1!4b1!4m2!3m1!1s0x89e37741a21295b9:0x22b97c31830fc93f
+address_street1: The Reginald F. Lewis Law Center
+address_street2: 1557 Massachusetts Avenue
+address_map_url: https://www.google.com/maps/place/1557+Massachusetts+Ave,+Cambridge,+MA+02138/@42.3782483,-71.1213313,17z/data=!3m1!4b1!4m5!3m4!1s0x89e37741bde17be1:0xf64e9368998f6967!8m2!3d42.3782444!4d-71.1191426
 address_city_state: Cambridge, MA 02138
 
 # Blog Feeds
