--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -3,6 +3,7 @@
 # need to be created when adding a person and placed in the thumbs dir #
 
 # When adding a core team member or summer fellow, add three sizes - 216x216, 432x432, 648x648 #
+# see https://github.com/harvard-lil/website-static#adding-staff-or-summer-visitors #
 
 
 # Currently affiliated #
