--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -326,7 +326,7 @@ june-casey:
 mathew-cha:
   name: Mathew Dongkyun Cha
   sort_name: Cha
-  role: Summer Research Assistant
+  role: 2022 Summer Research Assistant
   affiliated: false
 
 stephen-chapman:
@@ -625,7 +625,7 @@ alison-head:
 davis-henderson:
   name: Davis Henderson
   sort_name: Henderson
-  role: Summer Research Assistant
+  role: 2022 Summer Research Assistant
   affiliated: false
 
 sha-hwang:
@@ -645,7 +645,7 @@ adaeze-ibeanu:
 varun-iyer:
   name: Varun Iyer
   sort_name: Iyer
-  role: Summer Research Assistant
+  role: 2022 Summer Research Assistant
   affiliated: false
 
 michael-jimenez:
@@ -731,7 +731,7 @@ doyung-lee:
 seonghee-lee:
   name: Seonghee Lee
   sort_name: Lee
-  role: Summer Research Assistant
+  role: 2022 Summer Research Assistant
   website: https://seungheelee.net/
   affiliated: false
 
@@ -912,7 +912,7 @@ zach-tan:
 emily-teng:
   name: Emily Teng
   sort_name: Teng
-  role: Summer Research Assistant
+  role: 2022 Summer Research Assistant
   affiliated: false
 
 shailin-thomas:
